--- a/css/index-style.css
+++ b/css/index-style.css
@@ -40,14 +40,14 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 10vw;
+    width: 11rem;
     height: 95%;
     margin: 0;
-    padding: 0.2rem 1rem;
+    padding: 0.2rem 0.5rem;
 }
 #menu a, .card a , button {
     min-width: max-content;
-    padding: 0.5rem 1.5rem;
+    padding: 0.5rem 1rem;
     border: none;
     text-align: center;
     font-size: 1.15rem;
@@ -121,6 +121,7 @@ header {
     background-image: url("../img/sfondi/sfondo1.jpg");
 }
 .card h3 {
+    width: 100%;
     margin-bottom: 1.2rem;
     font-size: 1.4rem;
     font-weight: 900;
@@ -143,6 +144,26 @@ header {
 }
 /* ---- End Cards ------------------------------------------------------------------------------------------------------*/
 
+/* ---- Project cards --------------------------------------------------------------------------------------------------*/
+#proj-card {
+    width: 45%;
+    background-image: none;
+}
+#proj-card h3 {
+    font-size: 1.5rem;
+    color: var(--title);
+}
+#proj-card img {
+    width: 100%;
+    height: 20rem;
+    object-fit: cover;
+}
+.card a {
+    font-weight: 400;
+    font-size: 1rem;
+}
+/* ---- End Project Cards ----------------------------------------------------------------------------------------------*/
+
 
 @media only screen and (max-width: 1024px) {
     :root {
@@ -157,7 +178,7 @@ header {
     }
     header.flex100 {
         flex-direction: column-reverse;
-        height: max-content;
+        /* height: fit-content; */
         padding: 0;
         margin: 0.5% 0 0;
     }
@@ -174,12 +195,12 @@ header {
         height: fit-content;
         padding: 0.8%;
     }
-    .card {
+    .card, #proj-card {
         width: 85%;
         margin: 7% auto;
         padding: 3% 5%;
     }
-    .card p {
+    .card p, #proj-card p {
         text-align: center;
     }
 }
@@ -189,7 +210,7 @@ header {
     :root {
         font-size: 13px;
     }
-    .card {
+    .card, #proj-card {
         width: 90%;
         margin: 7% auto;
         padding: 2rem 1rem;
