Alignment of the relative paths

--- a/templates/php.html
+++ b/templates/php.html
@@ -10,7 +10,7 @@ title: Progetti PHP
                 <h3>Analisi di bilancio</h3>
             </div>
             <div>
-                <img src="../img/card-progetti/bilanci.png">
+                <img src="/img/card-progetti/bilanci.png">
             </div>
             <p>
                 Web app che effettua l'analisi per indici a partire dai dati di bilancio inseriti dall'utente
@@ -32,7 +32,7 @@ title: Progetti PHP
                 <h3>Registro presenze</h3>
             </div>
             <div>
-                <img src="../img/card-progetti/registro.png">
+                <img src="/img/card-progetti/registro.png">
             </div>
             <p>
                 Web app che gestisce il registro elettronico di una scuola online.
