Alignment of file names to solve incompatibilities

--- a/templates/php.html
+++ b/templates/php.html
@@ -10,7 +10,7 @@ title: Progetti PHP
                 <h3>Analisi di bilancio</h3>
             </div>
             <div>
-                <img src="{{ baseurl }}/img/card-progetti/bilanci.png">
+                <img src="{{ baseurl }}/img/card-progetti/bilanci.PNG">
             </div>
             <p>
                 Web app che effettua l'analisi per indici a partire dai dati di bilancio inseriti dall'utente
@@ -32,9 +32,7 @@ title: Progetti PHP
                 <h3>Registro presenze</h3>
             </div>
             <div>
-                <img src="{{ baseurl }}/img/card-progetti/registro.png">
-            </div>
-            <p>
+                <img src="{{ baseurl }}/img/card-progetti/registro.PNG           <p>
                 Web app che gestisce il registro elettronico di una scuola online.
                 <br><br>
                 Offre al docente la possibilità di consultare e scaricare l'elenco dei propri corsi 
