--- a/_layouts/index_base.html
+++ b/_layouts/index_base.html
@@ -1,9 +1,3 @@
-{% if jekyll.environment == "production" %}
-  {% assign baseurl = site.baseurl %}
-{% else %}
-  {% assign baseurl = "" %}
-{% endif %}
-
 <!DOCTYPE html>
 <html lang="it">
 
@@ -11,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" type="text/css" href="{{ baseurl }}/css/index-style.css">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/index-style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="{{ baseurl }}/js/script.js" defer></script>
+    <script src="{{ site.baseurl }}/js/script.js" defer></script>
 </head>
 
 <body>
@@ -25,25 +19,25 @@
     <header class="flex100">
 
         <div id="menu">
-            <a href="{{ baseurl }}/index.html">Home</a>
+            <a href="{{ site.baseurl }}/index.html">Home</a>
             <a href="">Java</a>
-            <a href="{{ baseurl }}/templates/php.html">PHP</a>
+            <a href="{{ site.baseurl }}/templates/php.html">PHP</a>
             <a href=".html">Python</a>
             <a href=".html">Su di me</a>
         </div>
     
         <div class="carousel">
             <picture class="active">
-                <source media="(min-width:1024px)" alt="languages" srcset="{{ baseurl }}/img/carousel/max1.PNG">
-                <img alt="languages" srcset="{{ baseurl }}/img/carousel/min1.PNG">
+                <source media="(min-width:1024px)" alt="languages" srcset="{{ site.baseurl }}/img/carousel/max1.PNG">
+                <img alt="languages" srcset="{{ site.baseurl }}/img/carousel/min1.PNG">
             </picture>
             <picture>
-                <source media="(min-width:1024px)" alt="technologies" srcset="{{ baseurl }}/img/carousel/max2.PNG">
-                <img alt="technologies" srcset="{{ baseurl }}/img/carousel/min2.PNG">
+                <source media="(min-width:1024px)" alt="technologies" srcset="{{ site.baseurl }}/img/carousel/max2.PNG">
+                <img alt="technologies" srcset="{{ site.baseurl }}/img/carousel/min2.PNG">
             </picture>
             <picture>
-                <source media="(min-width:1024px)" alt="principles and patterns" srcset="{{ baseurl }}/img/carousel/max3.PNG">
-                <img alt="principles and patterns" srcset="{{ baseurl }}/img/carousel/min3.PNG">
+                <source media="(min-width:1024px)" alt="principles and patterns" srcset="{{ site.baseurl }}/img/carousel/max3.PNG">
+                <img alt="principles and patterns" srcset="{{ site.baseurl }}/img/carousel/min3.PNG">
             </picture>
         </div>
 
