--- a/css/index-style.css
+++ b/css/index-style.css
@@ -69,7 +69,7 @@ header {
     height: 100%;
     margin-left: 0;
     /* background-image: linear-gradient(to right, var(--header), var(--card)); */
-    background-image: url("/img/sfondi/sfondo1.jpg");
+    background-image: url("../img/sfondi/sfondo1.jpg");
     background-size: cover;
     overflow: hidden;
     transition: transform 0.5s;
@@ -118,7 +118,7 @@ header {
     border-radius: 5px;
     padding: 1.5% 2%;
     margin: 4%;
-    background-image: url("/img/sfondi/sfondo1.jpg");
+    background-image: url("../img/sfondi/sfondo1.jpg");
 }
 .card h3 {
     width: 100%;
