Style and images tests

--- a/_layouts/index_base.html
+++ b/_layouts/index_base.html
@@ -29,7 +29,8 @@
         <div class="carousel">
             <picture class="active">
                 <source media="(min-width:1024px)" alt="languages" srcset="{{ site.baseurl }}/img/carousel/max1.PNG">
-                <img alt="languages" srcset="{{ site.baseurl }}/img/carousel/min1.PNG">
+                <source media="(min-width:500px)" alt="languages" srcset="{{ site.baseurl }}/img/carousel/min1.PNG">
+                <img alt="languages" srcset="{{ site.baseurl }}/img/carousel/Cattura.PNG">
             </picture>
             <picture>
                 <source media="(min-width:1024px)" alt="technologies" srcset="{{ site.baseurl }}/img/carousel/max2.PNG">
