--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1,4 +1,4 @@
-/* ---- Generals -------------------------------------------------------------------------------------------------------*//* -moz-linear-gradient(top, #529A8B 0%, #0E654E 100%);  -moz-linear-gradient(top, #9A5261 0%, #650E25 100%); */
+/* ---- Generals -------------------------------------------------------------------------------------------------------*/
 :root {
     --title: rgba(13, 55, 64, 0.756);
     --header: rgba(48, 7, 29, 0.219);
@@ -12,63 +12,101 @@
     margin: 0 auto;
     font-family: 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
-.flex100 {
+.flexOr {
     display: flex;
+    flex-direction: row;
     max-width: 100%;
+}
+.flexVert {
+    display: flex;
+    flex-direction: column;
+}
+button {
+    background-color: transparent;
+    border: none;
+}
+.button {
+    width: 7.5rem;
+    min-width: max-content;
+    padding: 0.5rem 1.5em;
+    text-align: center;
+    font-size: 1.15rem;
+    font-weight: bolder;
+    color: var(--light-text);
+    background-color: var(--button);
+    border-radius: 10px;
+}
+a {
+    text-decoration: none;
 }
 /* ---- END Generals----------------------------------------------------------------------------------------------------*/
 
-/* ---- Header ---------------------------------------------------------------------------------------------------------*/
-#title {
-    width: 100vw;
+/* ---- Header-Footer --------------------------------------------------------------------------------------------------*/
+#title, footer {
+    display: flex;
+    width: 100%;
     align-items: center;
-    justify-items: center;
+    justify-content: space-between;
     padding: 0.7% 0;
+    text-align: center;
     font-size: 0.9rem;
     font-weight: normal;
     color: var(--light-text);
     background-color: var(--title);
 }
-header {
+footer.flexOr {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding: 0.3% 0;
+}
+footer>span, #title>span {
     display: flex;
     align-items: center;
-    width: 100%;
-    height: 16rem;
-    padding: 0.5% 0.5% 0 0;
+    width: 15rem;
+    margin: 0 3%;
 }
+footer>span>a {
+    margin-left: 3%;
+    color: var(--light-text);
+}
+footer>span>a:hover {
+    color: lightyellow;
+}
+footer>span>img{
+    height: 3rem;
+}
+header {
+    align-items: center;
+    height: 15.7rem;
+    padding: 0.5rem 0.5rem 0 0;
+}
+/* ---- end Header-Footer ----------------------------------------------------------------------------------------------*/
+
+/* ---- Header menu ----------------------------------------------------------------------------------------------------*/
 #menu {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 11rem;
-    height: 95%;
-    margin: 0;
-    padding: 0.2rem 0.5rem;
+    align-content: center;
+    width: fit-content;
+    height: 100%;
+    margin: auto;
+    padding: 0.5rem 1.3rem;
 }
-#menu a, .card a , button {
-    min-width: max-content;
-    padding: 0.5rem 1rem;
-    border: none;
-    text-align: center;
-    font-size: 1.15rem;
-    font-weight: bolder;
-    color: var(--dark-text);
+#menu a:not(.active){
     background-color: transparent;
-    text-decoration: none;
+    color: var(--dark-text);
 }
-#menu a.active, .card a {
-    width: 100%;
-    border-radius: 10px;
-    color: var(--light-text);
-    background-color: var(--button);
-}
-.carousel  {
+/* ---- end Header menu ------------------------------------------------------------------------------------------------*/
+
+/* ---- Header carousel ------------------------------------------------------------------------------------------------*/
+.carousel {
     display: flex;
     align-items: center;
     width: 100%;
     height: 100%;
     margin-left: 0;
-    /* background-image: linear-gradient(to right, var(--header), var(--card)); */
     background-image: url("../img/sfondi/sfondo1.jpg");
     background-size: cover;
     overflow: hidden;
@@ -77,6 +115,7 @@ header {
 .carousel picture {
     flex: 1;
     display: none;
+    box-sizing: content-box;
 }
 .carousel picture.active {
     display: block;
@@ -84,7 +123,7 @@ header {
 .carousel picture img {
     object-fit: cover;
     width: 100%;
-    height: fit-content;
+    padding: 1rem 0;
 }
 @keyframes hideToLeft {
     0% {
@@ -106,23 +145,23 @@ header {
         transform: translateX(0);
     }
 }
-/* ---- END Header -----------------------------------------------------------------------------------------------------*/
+/* ---- END Header carousel --------------------------------------------------------------------------------------------*/
 
 /* ---- Cards ----------------------------------------------------------------------------------------------------------*/
 .card {
     display: flex;
     flex-direction: column;
-    width: 25%;
+    margin: 0;
+    width: 100%;
     min-height: max-content;
     border: 1px solid var(--dark-text);
     border-radius: 5px;
     padding: 1.5% 2%;
-    margin: 4%;
     background-image: url("../img/sfondi/sfondo1.jpg");
 }
-.card h3 {
+.card h3, .section h3 {
     width: 100%;
-    margin-bottom: 1.2rem;
+    text-align: center;
     font-size: 1.4rem;
     font-weight: 900;
     color: var(--dark-text);
@@ -130,11 +169,11 @@ header {
 .card p {
     height: 50%;
     margin: 0.2rem auto 2rem;
-    font-size: 1.1em;
+    font-size: 1.1rem;
     text-align: justify;
 }
 .card img {
-    margin: 0.7rem auto 1.5rem;
+    margin: 1.5rem auto 1.5rem;
     height: 7rem;
     object-fit: cover;
 }
@@ -144,75 +183,71 @@ header {
 }
 /* ---- End Cards ------------------------------------------------------------------------------------------------------*/
 
-/* ---- Project cards --------------------------------------------------------------------------------------------------*/
-#proj-card {
-    width: 45%;
-    background-image: none;
+/* ---- Main sections --------------------------------------------------------------------------------------------------*/
+.section {
+    display: flex;
+    flex-direction: column;
+    align-content: space-between;
+    width: 85vw;
+    margin: 5% auto 5%;
+    padding: 0;
 }
-#proj-card h3 {
+div.section h3 {
+    margin: 0 auto 1.5%;
     font-size: 1.5rem;
 }
-#proj-card img {
+div.section>div.flexOr {
     width: 100%;
-    height: 20rem;
+    justify-content: space-between;
 }
-#proj-card a {
-    
+.intro {
+    width: 100%;
+}
+.intro p {
+    margin: 2% 3%;
+}
+/* ---- END Main sections ----------------------------------------------------------------------------------------------*/
+
+/* ---- Highlighted projects (based on .card) --------------------------------------------------------------------------*/
+.carousel.card {
+    width: 100%;
+    flex-direction: row;
+    align-items: start;
+}
+.last-proj img {
+    width: 60%;
+    height: fit-content;
+    padding: 0;
+}
+.last-proj p {
+    width: 100%;
+    height: fit-content;
+    padding: 2% 3%;
+}
+img.arrow {
+    width: 2.5rem;
+    object-fit: scale-down;
+    opacity: 0.8;
+    transition: opacity 0.3s ease; 
+}
+.arrow:hover {
+    opacity: 1;
+}
+/* ---- End Highlighted projects ---------------------------------------------------------------------------------------*/
+
+/* ---- Project cards (based on .card) ---------------------------------------------------------------------------------*/
+.proj-card {
+    width: 100%;
+}
+.section>.flexOr>div:not(:last-child) {
+    margin-right: 5%;
+}
+.proj-card h3 {
+    font-size: 1.5rem;
+}
+.proj-card img {
+    width: 100%;
+    height: 16rem;
+    object-fit: scale-down;
 }
 /* ---- End Project Cards ----------------------------------------------------------------------------------------------*/
-
-
-@media only screen and (max-width: 1024px) {
-    :root {
-        font-size: 17px;
-    }
-    .flex100 {
-        flex-direction: column;
-    }
-    #title {
-        padding: 0.7rem;
-        font-size: 0.7rem;
-    }
-    header.flex100 {
-        flex-direction: column-reverse;
-        height: fit-content;
-        padding: 0;
-        margin: 0.5% 0 0;
-    }
-    #menu {
-        flex-direction: row;
-        width: 100%;
-        margin: 0 auto 4%;
-        padding: 1%;
-        background-color: var(--light-text);
-    }
-    #menu a.active, #menu a {
-        width: 8rem;
-        min-width: fit-content;
-        height: fit-content;
-        padding: 0.8%;
-    }
-    .card, #proj-card {
-        width: 85%;
-        margin: 7% auto;
-        padding: 3% 5%;
-    }
-    .card p, #proj-card p {
-        text-align: center;
-    }
-    #proj-card img {
-        height: 15rem;
-    }
-}
-
-
-@media only screen and (max-width: 500px) {
-    :root {
-        font-size: 13px;
-    }
-    .card, #proj-card {
-        width: 90%;
-        margin: 4% auto 5%;
-        padding: 2rem 1rem;
-    }
-}
