Adds java index and small adjustments

--- a/_layouts/index_base.html
+++ b/_layouts/index_base.html
@@ -21,7 +21,7 @@
 
         <div id="menu">
             <a class="button" href="{{ site.baseurl }}/index.html">Home</a>
-            <a class="button" href="{{ site.baseurl }}/index.html">Java</a>
+            <a class="button" href="{{ site.baseurl }}/linguaggi/java.html">Java</a>
             <a class="button" href="{{ site.baseurl }}/linguaggi/php.html">PHP</a>
             <a class="button" href="{{ site.baseurl }}/linguaggi/python.html">Python</a>
         </div>
