Adds responsive changes

--- a/_layouts/index_base.html
+++ b/_layouts/index_base.html
@@ -28,17 +28,20 @@
     
         <div class="carousel">
             <picture class="active">
-                <source media="(min-width:720px)" alt="languages" srcset="{{ site.baseurl }}/img/carousel/maxi1.PNG">
-                <source media="(min-width:500px)" alt="languages" srcset="{{ site.baseurl }}/img/carousel/min1.PNG">
-                <img alt="languages" srcset="{{ site.baseurl }}/img/carousel/Cattura.PNG">
+                <source media="(min-width:700px)" alt="languages" srcset="{{ site.baseurl }}/img/carousel/maxi1.PNG">
+                <img alt="languages" srcset="{{ site.baseurl }}/img/carousel/min1.PNG">
             </picture>
             <picture>
-                <source media="(min-width:720px)" alt="technologies" srcset="{{ site.baseurl }}/img/carousel/maxi2.PNG">
+                <source media="(min-width:700px)" alt="technologies" srcset="{{ site.baseurl }}/img/carousel/maxi2.PNG">
                 <img alt="technologies" srcset="{{ site.baseurl }}/img/carousel/min2.PNG">
             </picture>
             <picture>
-                <source media="(min-width:720px)" alt="principles and patterns" srcset="{{ site.baseurl }}/img/carousel/maxi3.PNG">
+                <source media="(min-width:700px)" alt="principles and patterns" srcset="{{ site.baseurl }}/img/carousel/maxi3.PNG">
                 <img alt="principles and patterns" srcset="{{ site.baseurl }}/img/carousel/min3.PNG">
+            </picture>
+            <picture>
+                <source media="(min-width:700px)" alt="principles and patterns" srcset="{{ site.baseurl }}/img/carousel/maxi4.PNG">
+                <img alt="principles and patterns" srcset="{{ site.baseurl }}/img/carousel/min4.PNG">
             </picture>
         </div>
 
@@ -47,6 +50,7 @@
     <main>
         {{ content }}
     </main>
+
 
     <footer class="flexOr">
         <span>
