Adds Java projects distributore and cineteca

--- a/_layouts/index_base.html
+++ b/_layouts/index_base.html
@@ -21,8 +21,8 @@
 
         <div id="menu">
             <a class="button" href="{{ site.baseurl }}/index.html">Home</a>
+            <a class="button" href="{{ site.baseurl }}/linguaggi/php.html">Php</a>
             <a class="button" href="{{ site.baseurl }}/linguaggi/java.html">Java</a>
-            <a class="button" href="{{ site.baseurl }}/linguaggi/php.html">PHP</a>
             <a class="button" href="{{ site.baseurl }}/linguaggi/python.html">Python</a>
         </div>
     
@@ -36,8 +36,8 @@
                 <img alt="technologies" srcset="{{ site.baseurl }}/img/carousel/min2.PNG">
             </picture>
             <picture>
-                <source media="(min-width:700px)" alt="principles and patterns" srcset="{{ site.baseurl }}/img/carousel/maxi3.PNG">
-                <img alt="principles and patterns" srcset="{{ site.baseurl }}/img/carousel/min3.PNG">
+                <source media="(min-width:700px)" alt="technologies" srcset="{{ site.baseurl }}/img/carousel/maxi3.PNG">
+                <img alt="technologies" srcset="{{ site.baseurl }}/img/carousel/min3.PNG">
             </picture>
             <picture>
                 <source media="(min-width:700px)" alt="principles and patterns" srcset="{{ site.baseurl }}/img/carousel/maxi4.PNG">
