--- a/css/responsive.css
+++ b/css/responsive.css
@@ -180,7 +180,7 @@
         font-size: 10px;
     }
     #title {
-        padding: 1.1% 0;
+        padding: 1.2% 0;
     }
     .section {
         width: 85vw;
@@ -188,6 +188,9 @@
     .card {
         width: 100%;
         padding: 4% 2%;
+    }
+    div.card h3 {
+        font-size: 1.1rem;
     }
     .proj-card img {
         height: 14rem;
