Added footer link to github home

--- a/_layouts/project_base.html
+++ b/_layouts/project_base.html
@@ -33,7 +33,8 @@
         </span>
 
         <span>
-            <img src="{{ site.baseurl }}/img/logo.PNG" alt="logo"> EnMa full stack developer
+            <img src="{{ site.baseurl }}/img/logo.PNG" alt="logo">
+            <a href="https://github.com/EnMa85">EnMa full stack developer</a>
         </span>
     </footer>
 
